--- a/MaHoaTepTin/MaHoaTepTin.csproj
+++ b/MaHoaTepTin/MaHoaTepTin.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -76,6 +77,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\NoCamera.png" />
+    <None Include="Resources\SearchIcon20.png" />
     <Content Include="TaiLieu.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
